updated-ch-ph-thai-language

--- a/organisms/lp-terms-ph-th.html
+++ b/organisms/lp-terms-ph-th.html
@@ -19,7 +19,7 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">Terms & Conditions</h3>
+                <h3 class="wu-title">TERMS AND CONDITIONS – KAMPANYA NG LOYALTY 2024</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
                     <div class="wu-lpterms__termitem"><span>1. </span><p>Ang impormasyon kung paano sumali at ang mga premyo ay bahagi ng mga Terms and Conditions na ito. Sa pagrehistro online, ang mga kalahok ay sumasang-ayon sa mga Terms and Conditions na ito.</p>
@@ -31,31 +31,31 @@
                     <div class="wu-lpterms__termitem"><span>3. </span><p>Ang promo ay bukas sa mga residente ng Thailand na may edad 18 pataas na tumutugon sa mga requirements ng promo na nakasaad sa clause 5 sa ibaba (“Eligible Participants”).
                     </p></div>
                     <!-- 4 -->
-                    <div class="wu-lpterms__termitem"><span>4. </span><p>Ang Promosyon ay magsisimula sa 12:00am (oras ng Bangkok) noong 15th Dec 2024 at magtatapos sa 11:59pm (oras ng Bangkok) noong 15th March 2025 (“Promotion Period”) at maaaring palawigin ng Promoter.
+                    <div class="wu-lpterms__termitem"><span>4. </span><p>4.	Ang Promosyon ay magsisimula sa 12:00am (oras ng Bangkok) sa 15th Dec 2024 at magtatapos sa 11:59pm (oras ng Bangkok) noong 15th March 2025 (“Promotion Period”) at maaaring palawigin ng Promoter.
                     </p></div>
                     <!-- 5 -->
                     <div class="wu-lpterms__termitem"><span>5. </span><p>Paano sumali: Magrehistro online at pumili ng nais na premyo (pumili ng isang uri lamang). Magpadala ng Western Union® Money Transfer na hindi bababa sa 10,000 THB mula sa anumang Western Union agents/partners sa retail locations o mobile banking o Western Union branded digital (wu.com at Western Union mobile app) sa Thailand papuntang Pilipinas, USA, China, India, at Vietnam sa loob ng Promotion Period.
                     </p></div>
                     <!-- 6 -->
-                    <div class="wu-lpterms__termitem"><span>6. </span><p>Mga Premyo: </p></div>
+                    <div class="wu-lpterms__termitem"><span>6. </span><p>Mga Premyo:  </p></div>
                     <!-- list a  -->
                     <div class="wu-lpterms__termlista">
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">100 THB Grab Voucher</span> Ang unang 800 na customer na makakakompleto ng isang qualifying transaction ay makakatanggap ng isang (1) 100 THB Grab voucher, na may isang panalo bawat customer.
+                                    <p><span class="bld">100 THB Grab Voucher: </span> Ang unang 800 na customer na makakakompleto ng isang qualifying transaction ay makakatanggap ng isang (1) 100 THB Grab voucher, isang panalo bawat customer.
                                     </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">300 THB Grab Voucher:</span> Ang unang 800 na customer na makakakompleto ng dalawang qualifying transactions ay makakatanggap ng isang (1) 300 THB Grab voucher, na may isang panalo bawat customer.
+                                    <p><span class="bld">300 THB Grab Voucher: </span> Ang unang 800 na customer na makakakompleto ng dalawang qualifying transactions ay makakatanggap ng isang (1) 300 THB Grab voucher, isang panalo bawat customer.
                                     </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">Single prize:</span>Maaaring manalo ang mga customer ng alinman sa mga voucher na ito isang beses lamang.
+                                    <p><span class="bld">Single prize:</span>Maaaring manalo ang mga customer ng alinman sa mga voucher na ito, isang beses lamang.
                                     </p>
                                 </div>
                             </li>
@@ -76,7 +76,7 @@
                         </ul>
                     </div>
                      <!-- 8 -->
-                     <div class="wu-lpterms__termitem"><span>8. </span><p>Ang Promoter ay magtatagal ng mga sapat na hakbang upang panatilihing pribado ang data na ito at hindi ito ibabahagi sa anumang third party. Wala ni Western Union o Phrong Stratagile Co. Ltd ang makikipag-ugnayan sa customer para sa anumang dahilan maliban sa pag-aanunsyo ng mga premyo.
+                     <div class="wu-lpterms__termitem"><span>8. </span><p>Ang Promoter ay magtatalaga ng mga sapat na hakbang upang panatilihing pribado ang data na ito at hindi ito ibabahagi sa anumang third party. Wala ni Western Union o Phrong Stratagile Co. Ltd ang makikipag-ugnayan sa customer para sa anumang dahilan maliban sa pag-aanunsyo ng mga premyo.
                     </p>
                     </div>
                      <!-- 9 -->
@@ -103,14 +103,14 @@
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>Ang mga winners ay aabisuhan sa pamamagitan ng tawag at nakarehistrong email na ibinigay sa registration form, at ang reward ay ipapadala sa pamamagitan ng SMS at email ng Promoter hindi lalampas ng 15th April 2025.
+                                    <p>Ang mga nanalo ay aabisuhan sa pamamagitan ng tawag at nakarehistrong email na ibinigay sa registration form, at ang reward ay ipapadala sa pamamagitan ng SMS at email ng Promoter hindi lalampas ng 15th April 2025.
                                     </p>
                                 </div>
                             </li>
                         </ul>
                      </div>
                       <!-- 11 -->
-                      <div class="wu-lpterms__termitem"><span>11. </span><p>Ang alok ay valid hangga’t may stocks at valid lamang sa loob ng Promotion Period. Ang mga premyo ay ibinibigay ng isang third-party provider, ayon sa kani-kanilang mga terms and conditions (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ng product warranty, na kung saan ang Promoter ay walang pananagutan.
+                      <div class="wu-lpterms__termitem"><span>11. </span><p>Ang alok ay valid hangga’t may stocks at valid lamang sa loob ng Promotion Period. Ang mga premyo ay ibinibigay ng isang third-party provider, ayon sa kani-kanilang mga terms and conditions  (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ng product warranty, na kung saan ang Promoter ay walang pananagutan.
                       </p>
                     </div>
                      <!-- 12 -->
@@ -138,11 +138,13 @@
                     </p>
                     </div>
                      <!-- 18 -->
-                     <div class="wu-lpterms__termitem"><span>18. </span><p>Itatago ng Stratagle ang mga detalye sa isang secure na database (AWS hosted). Ang customer data ay hindi gagamitin para sa anumang layunin maliban sa pagpili ng winner at hindi ito ibabahagi. Kung ang customer ay mag-o-opt out, permanenteng ide-delete ang rekord nang walang kasaysayan. Ang Western Union ay magkakaroon lamang ng visibility ng data para sa layunin ng verification ng transaction at hindi ito mag-iimbak ng anumang kopya. Ide-delete namin ang data sa pagtatapos ng pilot period. Magpo-post kami ng detalyadong online privacy statement at Terms and Conditions na naka-attach sa link.
+                     <div class="wu-lpterms__termitem"><span>18. </span><p>Itatago ng Stratagle ang mga detalye sa isang secure na database (AWS hosted). Ang customer data ay hindi gagamitin para sa anumang layunin maliban sa pagpili ng winner at hindi ito ibabahagi kahit kanino. Kung ang customer ay mag-o-opt out, permanenteng ide-delete ang rekord nang walang kasaysayan. Ang Western Union ay magkakaroon lamang ng visibility ng data para sa layunin ng verification ng transaction at hindi ito mag-iimbak ng anumang kopya. Ide-delete namin ang data sa pagtatapos ng pilot period. Magpo-post kami ng detalyadong online privacy statement at Terms and Conditions na naka-attach sa link.
                     </p>
                     </div>
                      <!-- 19 -->
-                     <div class="wu-lpterms__termitem"><span>19. </span><p>Ang promosyon ay sumusunod sa lahat ng naaangkop na batas at regulasyon laban sa suhol at korapsyon.
+                     <div class="wu-lpterms__termitem"><span>19. </span><p>19.	Ang promosyon ay sumusunod sa lahat ng naaangkop na batas at regulasyon laban sa suhol at korapsyon.
+                        © 2024 Stratagile Pte Ltd All Rights Reserved.
+                        
                     </p>
                     </div>
                 </div>
