--- a/organisms/lp-terms-thai.html
+++ b/organisms/lp-terms-thai.html
@@ -19,44 +19,52 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">ข้อกำหนดและเงื่อนไข – แคมเปญ 2024</h3>
+                <h3 class="wu-title">ข้อกำหนดและเงื่อนไข – แคมเปญความภักดี 2024</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
-                    <div class="wu-lpterms__termitem"><span>1. </span><p>ข้อมูลเกี่ยวกับวิธีการเข้าร่วมและรางวัลเป็นส่วนหนึ่งของข้อกำหนดและเงื่อนไขเหล่านี้เมื่อลงทะเบียนออนไลน์ผู้เข้าร่วมจะถือว่ายอมรับข้อกำหนดและเงื่อนไขเหล่านี้</p>
+                    <div class="wu-lpterms__termitem"><span>1. </span><p>ข้อมูลเกี่ยวกับวิธีการเข้าร่วมและรางวัลเป็นส่วนหนึ่งของข้อกำหนดและเงื่อนไขเหล่านี้ เมื่อลงทะเบียน ออนไลน์ ผู้เข้าร่วมจะถือว่ายอมรับข้อกำหนดและเงื่อนไขเหล่านี้</p>
                     </div>
                     <!-- 2 -->
-                    <div class="wu-lpterms__termitem"><span>2. </span><p>ผู้จัดโปรโมชันนี้คือ Stratagile Pte Ltd (“ผู้จัดโปรโมชั่น”) ซึ่งมีที่อยู่ บริษัท ฟรองค์ สแทรทแอจไจล์ จำกัด 149 หมู่ 4 ตำบลแคราย อำเภอกระทุ่มแบน จังหวักสมุทรสาคร 74110 เป็นผู้ดำเนินการโปรโมชั่นนี้ในนามของ Western Union และ Western Union จะไม่รับผิดชอบต่อส่วนใดๆ ของโปรโมชันนี้ โปรแกรมนี้ได้รับการจัดการโดยผู้จัดโปรโมชันโดยสมบูรณ์</p>
+                    <div class="wu-lpterms__termitem"><span>2. </span><p>ผู้จัดโปรโมชันนี้คือ Stratagile Pte Ltd (“ผู้จัดโปรโมชัน”) ที่อยู่ บริษัท ฟรองค์ สแทรทแอจไจล์ จำกัด 149 หมู่ 4 ตำบลแคราย อำเภอกระทุ่มแบน จังหวักสมุทรสาคร 74110 บริษัท ฟรองค์ สแทรทแอจไจล์ จำกัด 
+                        เป็นผู้จัดการโปรโมชั่นนี้ในนามของ Western Union และ Western Union จะไม่รับผิดชอบต่อส่วนใดๆ ของโปรโมชั่นนี้ โปรแกรมนี้ได้รับการจัดการโดยผู้จัดโปรโมชั่นโดยสมบูรณ์
+                        </p>
                     </div>
                     <!-- 3 -->
-                    <div class="wu-lpterms__termitem"><span>3. </span><p>โปรโมชั่นนี้เปิดให้เฉพาะผู้ที่อาศัยอยู่ในประเทศไทยและมีอายุตั้งแต่ 18 ปีขึ้นไปซึ่งตรงตามข้อกำหนดของโปรโมชั่นที่ระบุไว้ในข้อ 5 ด้านล่าง (“ผู้เข้าร่วมที่มีสิทธิ์”)</p></div>
+                    <div class="wu-lpterms__termitem"><span>3. </span><p>โปรโมชั่นนี้เปิดเฉพาะผู้ที่อาศัยอยู่ในประเทศไทย อายุ 18 ปีขึ้นไป ตอบสนองข้อกำหนดการส่งเสริมการขายตามที่ระบุไว้ในข้อ 5 ด้านล่าง (“ผู้เข้าร่วมที่มีสิทธิ์”)</p></div>
                     <!-- 4 -->
-                    <div class="wu-lpterms__termitem"><span>4. </span><p>โปรโมชั่นนี้เริ่มต้นเวลา 00:00 น. (เวลากรุงเทพฯ) ของวันที่ 15 ธันวาคม 2567 และสิ้นสุดเวลา 23:59 น. (เวลากรุงเทพฯ) ของวันที่ 15 มีนาคม 2568 (“ระยะเวลาโปรโมชั่น”) และอาจขยายเวลาออกไปโดยผู้จัดโปรโมชั่น</p></div>
+                    <div class="wu-lpterms__termitem"><span>4. </span><p>โปรโมชั่นนี้เริ่มต้นเวลา 00:00 น. (เวลากรุงเทพฯ) ของวันที่ 15 ธันวาคม 2567 และสิ้นสุดเวลา 23:59 น. (เวลากรุงเทพฯ) ของวันที่ 15 มีนาคม 2568 (“ระยะเวลาโปรโมชั่น”) อาจมีการเปลี่ยนแปลงหรือขยายเวลาตามความเหมาะสมโดยผู้จัด</p></div>
                     <!-- 5 -->
-                    <div class="wu-lpterms__termitem"><span>5. </span><p>วิธีการเข้าร่วม: ลงทะเบียนออนไลน์และเลือกของรางวัลที่ต้องการ (เลือกได้ 1 ประเภทเท่านั้น) โอนเงินผ่าน Western Union® สำเร็จเป็นจำนวนอย่างน้อย 10,000 บาท จากตัวแทน/พันธมิตรของ Western Union ณ สถานที่สาขาธนาคาร หรือ โมบายแบงค์กิ้ง หรือ ช่องทางดิจิทัลของ Western Union (wu.com และแอปมือถือ Western Union) ในประเทศไทยไปยังประเทศฟิลิปปินส์ สหรัฐอเมริกา จีน อินเดีย และเวียดนาม ในช่วงระยะเวลาโปรโมชั่น</p></div>
+                    <div class="wu-lpterms__termitem"><span>5. </span><p>วิธีการเข้าร่วม: ลงทะเบียนออนไลน์ และเลือกของรางวัลที่ต้องการ (เลือกได้ 1 ประเภทเท่านั้น) โอนเงินผ่าน Western Union® สำเร็จเป็นจำนวนอย่างน้อย 10,000 บาท จากตัวแทน/พันธมิตรของ Western Union ณ สถานที่ขายปลีกหรือ โมบายแบงค์กิ้ง หรือ ช่องทางดิจิทัลของ Western Union (wu.com และแอปพลิเคชัน Western Union) ในประเทศไทยไปยังประเทศฟิลิปปินส์ สหรัฐอเมริกา จีน อินเดีย และเวียดนาม ในช่วงระยะเวลาโปรโมชั่น</p></div>
                     <!-- 6 -->
-                    <div class="wu-lpterms__termitem"><span>6. </span><p>รางวัล: </p></div>
+                    <div class="wu-lpterms__termitem"><span>6. </span><p>รางวัล:</p></div>
                     <!-- list a  -->
                     <div class="wu-lpterms__termlista">
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>บัตรกำนัล Grab มูลค่า 100 บาท : ลูกค้า 800 คนแรกที่ทำธุรกรรมที่เข้าเงื่อนไขครบ 1 รายการ จะได้รับ บัตรกำนัล Grab มูลค่า 100 บาท จำนวน 1 ใบ บัตรกำนัล 1 รางวัลต่อลูกค้า 1 ท่าน</p>
+                                    <p>บัตรกำนัล Grab มูลค่า 100 บาท ลูกค้า 800 คนแรกที่ทำธุรกรรมที่เข้าเงื่อนไขครบ 1 รายการ 
+                                        จะได้รับ บัตรกำนัล Grab มูลค่า 100 บาท จำนวน 1 ใบ บัตรกำนัล 1 รางวัลต่อลูกค้า 1 ท่าน
+                                        </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>บัตรกำนัล Grab มูลค่า 300 บาท : ลูกค้า 800 คนแรกที่ทำธุรกรรมที่เข้าเงื่อนไขครบ 2 รายการจะได้รับบัตรกำนัล Grab มูลค่า 300 บาท จำนวน 1 ใบ รับ บัตรกำนัลโดยลูกค้า 1 ท่านจะได้รับ 1 รางวัล</p>
+                                    <p>บัตรกำนัล Grab มูลค่า 300 บาท ลูกค้า 800 คนแรกที่ทำธุรกรรมที่เข้าเงื่อนไขครบ 2 รายการ
+                                        จะได้รับบัตรกำนัล Grab มูลค่า 300 บาท จำนวน 1 ใบ บัตรกำนัล 1 รางวัลต่อลูกค้า 1 ท่าน
+                                        </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>รางวัลเดี่ยว : ลูกค้าสามารถรับรางวัล ใดรางวัลหนึ่งจากบัตรกำนัล ครั้งเดียวเท่านั้น</p>
+                                    <p>รางวัลเดี่ยว ลูกค้าสามารถชนะรางวัล ใดรางวัลหนึ่งจากบัตรกำนัล เพียงครั้งเดียวเท่านั้น</p>
                                 </div>
                             </li>
                         </ul>
                      </div>
                      <!-- 7 -->
-                     <div class="wu-lpterms__termitem"><span>7. </span><p>รางวัลไม่สามารถโอนหรือเปลี่ยนเป็นเงินสดได้เพื่อที่จะอ้างสิทธิ์ในการเข้าร่วมผู้เข้าร่วมที่มีสิทธิ์จะต้องเข้าสู่ระบบหน้าแคมเปญและระบุข้อมูลต่อไปนี้เพื่อลงทะเบียนเข้าร่วมโปรโมชั่นจนถึง วันที่ 15 มีนาคม 2568</p></div>
+                     <div class="wu-lpterms__termitem"><span>7. </span><p>รางวัลไม่สามารถโอนหรือเปลี่ยนเป็นเงินสดได้ เพื่อขอรับสิทธิ์เข้าร่วม ผู้เข้าร่วมที่มีสิทธิ์ต้องเข้าสู่ระบบ 
+                        หน้าแคมเปญ และให้ข้อมูลต่อไปนี้เพื่อลงทะเบียนเข้าร่วมโปรโมชั่นจนถึง วัน ที่ 15 มีนาคม 2568
+                        </p></div>
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
                         <ul>
@@ -69,10 +77,10 @@
                         </ul>
                     </div>
                      <!-- 8 -->
-                     <div class="wu-lpterms__termitem"><span>8. </span><p>ผู้จัดโปรโมชั่นจะใช้มาตรการป้องกันที่เหมาะสมเพื่อรักษาข้อมูลนี้ให้เป็นส่วนบุคคลและจะไม่แบ่งปันข้อมูลนี้กับบุคคลที่สามไม่ว่าจะเป็น Western Union หรือ บริษัท ฟรองค์ สแทรทแอจไจล์ จำกัด จะไม่ติดต่อลูกค้าด้วยเหตุผลใดๆ ก็ตาม นอกเหนือจากการประกาศรางวัล</p>
+                     <div class="wu-lpterms__termitem"><span>8. </span><p>ผู้จัดโปรโมชั่นจะใช้มาตรการป้องกันที่เหมาะสมเพื่อรักษาข้อมูลนี้ให้เป็นส่วนบุคคลและจะไม่แบ่งปันข้อมูลนี้ให้กับบุคคลที่สาม ไม่ว่าจะเป็น Western Union หรือ บริษัท ฟรองค์ สแทรทแอจไจล์ จำกัด ไม่ว่าจะติดต่อลูกค้าด้วยเหตุผลใดๆ ก็ตาม นอกเหนือจากการประกาศรางวัล</p>
                     </div>
                      <!-- 9 -->
-                     <div class="wu-lpterms__termitem"><span>9. </span><p>ผู้จัดงานจะเป็นผู้รับผิดชอบต่อเรื่องใดๆ ที่เกิดขึ้นจากหรือเกี่ยวข้องกับรางวัล บริการ หรือข้อมูลที่ตนจัดให้ หากมีคำถามหรือข้อร้องเรียนใดๆ เกี่ยวกับรางวัล บริการ หรือข้อมูล กรุณาติดต่อผู้จัดงานโดยตรง</p>
+                     <div class="wu-lpterms__termitem"><span>9. </span><p>ผู้จัดงานจะเป็นผู้รับผิดชอบต่อที่เกิดขึ้นที่เกี่ยวข้องกับรางวัล บริการ หรือข้อมูลที่ตนจัดให้ หากมีคำถามหรือข้อร้องเรียนใดๆ เกี่ยวกับรางวัล บริการ หรือข้อมูล สามารถติดต่อผู้จัดงานได้โดยตรง</p>
                     </div>
                      <!-- 10 -->
                      <div class="wu-lpterms__termitem"><span>10. </span><p>เพื่อรับสิทธิ์รับรางวัล:</p>
@@ -82,47 +90,53 @@
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>ผู้โชคดีจำนวน 800 คน ที่ได้รับบัตรกำนัล Grab มูลค่า 100 บาท จะถูกเลือกตามลำดับวันที่ทำรายการครั้งแรก</p>
+                                    <p>ผู้โชคดีจำนวน 800 คน ที่ได้รับ บัตรกำนัล Grab มูลค่า 100 บาท จะถูกคัดเลือกตามลำดับ
+                                        วันที่ทำรายการ ครั้งแรก
+                                        </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>ผู้โชคดีจำนวน 800 คน ที่ได้รับบัตรกำนัล Grab มูลค่า 300 บาท จะถูกเลือกตามลำดับวันที่ทำรายการครั้งที่สอง</p>
+                                    <p>ผู้โชคดีจำนวน 800 คน ที่ได้รับ บัตรกำนัล Grab มูลค่า 300 บาท จะถูกคัดเลือกตามลำดับ
+                                        วันที่ ทำธุรกรรม ครั้งที่ 2
+                                        </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>ผู้ที่ได้รับรางวัลจะได้รับแจ้งผ่านทางอีเมลที่ลงทะเบียนและจะจัดส่งรางวัลผ่าน SMS และอีเมลโดยผู้จัดงานไม่เกินวันที่ 15 เมษายน 2568</p>
+                                    <p>ผู้ชนะจะได้รับแจ้งผ่านช่องทางการติดต่อและอีเมลที่ลงทะเบียนไว้ตามแบบฟอร์มลงทะเบียน และรางวัลจะส่งรางวัลผ่าน SMS และอีเมลโดยผู้จัดงาน ไม่เกิน วันที่ 15 เมษายน 2568</p>
                                 </div>
                             </li>
                         </ul>
                      </div>
                       <!-- 11 -->
-                      <div class="wu-lpterms__termitem"><span>11. </span><p>ข้อเสนอนี้มีผลจนกว่าสินค้าจะหมดและมีผลตลอดช่วงระยะเวลาโปรโมชั่น รางวัลจะมอบโดยผู้ให้บริการ โดยต้องเป็นไปตามข้อกำหนดและเงื่อนไขการรับประกันสินค้า (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ที่เกี่ยวข้อง ซึ่งผู้จัดโปรโมชั่นจะไม่รับผิดชอบใดๆ ทั้งสิ้น</p>
+                      <div class="wu-lpterms__termitem"><span>11. </span><p>ข้อเสนอมีผลจนกว่าสินค้าจะหมดและมีผลตลอดช่วงระยะเวลาโปรโมชั่น รางวัลจะมอบให้โดยผู้ให้บริการบุคคลที่สาม โดยต้องเป็นไปตามข้อกำหนดและเงื่อนไข การรับประกันสินค้า (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ที่เกี่ยวข้อง ซึ่งผู้จัดโปรโมชั่นจะไม่รับผิดชอบใดๆ ทั้งสิ้น</p>
                     </div>
                      <!-- 12 -->
-                     <div class="wu-lpterms__termitem"><span>12. </span><p>ผู้ที่ได้รับรางวัลจะต้องรับผิดชอบภาษีใดที่เกิดขึ้นจากการได้รับรางวัลรางวัลนั้นจัดทำโดยGrab และจะรับผิดชอบต่อเรื่องที่เกิดขึ้นจากรางวัลหรือเกี่ยวข้องกับรางวัล บริการ หรือข้อมูลที่ให้ไว้ ซึ่งผู้จัดงานจะไม่รับผิดชอบใดๆ ทั้งสิ้น คำถามหรือข้อร้องเรียนใดๆ เกี่ยวกับรางวัล บริการหรือข้อมูลควรผู้จัดทำรางวัลผู้จัดงานจะไม่รับผิดชอบต่อรางวัลที่ไม่เป็นไปตามความคาดหวังของผู้ที่ได้รับรางวัลต่อคุณภาพและความพร้อมใช้งานของรางวัลบริการและข้อมูลที่ผู้ให้บริการให้ไว้และจะไม่รับผิดใดๆ ที่เกี่ยวข้องกับโปรโมชั่นเมื่อผู้โชคดีได้รับประโยชน์ใดๆ ที่เกี่ยวข้องกับโปรโมชั่นในขอบเขตตามที่กฎหมายอนุญาต</p>
+                     <div class="wu-lpterms__termitem"><span>12. </span><p>ผู้ชนะจะต้องรับผิดชอบภาษีใดๆ ที่เกิดขึ้นจากการได้รับรางวัล รางวัลดังกล่าวจัดทำโดยบุคคลภายนอก และต้องรับผิดชอบต่อเรื่องใดๆ ที่เกิดขึ้นเกี่ยวข้องกับรางวัล บริการ หรือข้อมูลที่บุคคลภายนอกให้ไว้ ซึ่งผู้จัดงานจะไม่มีความรับผิดใดๆ ทั้งสิ้น คำถามหรือข้อร้องเรียนใดๆ เกี่ยวกับรางวัล บริการ หรือข้อมูล สามารถสอบถามผู้ให้บริการรางวัลได้โดยตรง ผู้จัดงานจะไม่รับผิดชอบต่อรางวัลที่ไม่เป็นไปตามความคาดหวังของผู้ชนะ และต่อคุณภาพและความพร้อมใช้งานของรางวัล บริการ และข้อมูลที่ผู้ให้บริการรางวัลที่ให้ไว้ และผู้ให้บริการรางวัลจะไม่รับผิดใดๆ ที่เกี่ยวข้องกับโปรโมชั่นเมื่อผู้ชนะได้รับประโยชน์ใดๆ ที่เกี่ยวข้องกับโปรโมชั่นในขอบเขตตามที่ที่กฎหมายอนุญาต</p>
                     </div>
                      <!-- 13 -->
-                     <div class="wu-lpterms__termitem"><span>13. </span><p>หากโปรโมชันนี้ถูกรบกวนในทางใดทางหนึ่งหรือไม่สามารถดำเนินการได้ตามที่คาดไว้เนื่องจากเหตุผลใดๆ ที่อยู่นอกเหนือการควบคุมที่ สมเหตุสมผลของผู้จัดโปรโมชั่น รวมถึงปัญหาทางเทคนิคหรือความล้มเหลว หรือการฉ้อโกงที่ไม่ได้รับอนุญาต การทำลายล้าง ไฟฟ้าดับ ภัยธรรมชาติ เหตุสุดวิสัย ความไม่สงบทางการเมือง การหยุดงาน การติดไวรัสคอมพิวเตอร์ ข้อบกพร่อง การดัดแปลง สิ่งรบกวนที่ไม่ได้รับอนุญาต การฉ้อโกง หรือสาเหตุอื่นใดที่อยู่นอกเหนือการควบคุมของผู้จัดโปรโมชั่น ซึ่งทำให้เกิดการทุจริตหรือส่งผลต่อการบริหาร ความปลอดภัยความเป็นธรรมความสมบูรณ์หรือการดำเนินการที่เหมาะสมของโปรโมชั่นผู้จัดโปรโมชันขอสงวนสิทธิ์ในการตัดสินใจเพียงฝ่ายเดียวในขอบเขตสูงสุดที่กฎหมายอนุญาต: (ก) ตัดสิทธิ์ผู้เข้าร่วมที่มีสิทธิ์ทุกคน หรือ (ข) แก้ไข ระงับ ยุติ หรือยกเลิกโปรโมชั่นตามคำสั่งเป็นลายลักษณ์อักษรจากหน่วยงานกำกับดูแล ตามความเหมาะสมเพื่อให้มีผลบังคับใช้เท่าที่เป็นไปได้อย่างสมเหตุสมผลตามเจตนาเดิมของโปรโมชั่นนี้</p>
+                     <div class="wu-lpterms__termitem"><span>13. </span><p>หากโปรโมชั่นนี้มีเหตุสุดวิสัยในทางใดทางหนึ่งหรือไม่สามารถดำเนินการได้ตามที่คาดไว้เนื่องจากเหตุผลใดๆ ที่อยู่นอกเหนือการควบคุมที่สมเหตุสมผลของผู้จัดโปรโมชั่น รวมถึงแต่ไม่จำกัดเพียงปัญหาทางเทคนิคหรือความล้มเหลว การแทรกแซงหรือการฉ้อโกงที่ไม่ได้รับอนุญาต การทำลายล้าง ไฟฟ้าดับ ภัยธรรมชาติ เหตุสุดวิสัย ความไม่สงบทางการเมือง การหยุดงาน การติดไวรัสคอมพิวเตอร์ ข้อบกพร่อง การดัดแปลง การแทรกแซงที่ไม่ได้รับอนุญาต การฉ้อโกง หรือสาเหตุอื่นใดที่อยู่นอกเหนือการควบคุมของผู้จัดโปรโมชั่น ซึ่งทำให้เกิดการทุจริตหรือส่งผลต่อการบริหาร ความปลอดภัย ความเป็นธรรม ความสมบูรณ์ หรือการดำเนินการที่เหมาะสมของโปรโมชั่นนี้ ผู้จัดโปรโมชั่นขอสงวนสิทธิ์ในการตัดสินใจเพียงฝ่ายเดียวในขอบเขตตามที่กฎหมายอนุญาต (ก) ตัดสิทธิ์ผู้เข้าร่วมที่มีสิทธิ์ทุกคน หรือ (ข) แก้ไข ระงับ ยุติ หรือยกเลิกโปรโมชั่นตามคำสั่งเป็นลายลักษณ์อักษรจากหน่วยงานกำกับดูแล ตามความเหมาะสมเพื่อให้มีผลบังคับใช้เท่าที่เป็นไปได้อย่างสมเหตุสมผลตามเจตนาเดิมของโปรโมชั่นนี้</p>
                     </div>
                     <!-- 14 -->
-                    <div class="wu-lpterms__termitem"><span>14. </span><p>ภายใต้กฎหมายที่บังคับใช้ซึ่งไม่สามารถยกเว้นได้ผู้จัดโปรโมชั่นและองค์กรที่เกี่ยวข้องและตัวแทนที่เกี่ยวข้องกับ โปรโมชั่นนี้จะไม่รับผิดชอบ ต่อการสูญเสีย ความเสียหาย ใดๆ ที่เกิดขึ้นกับบุคคลใดๆ (รวมถึงไม่ว่าจะการสูญเสียโดยตรงหรือโดยอ้อม การสูญเสียที่เป็นผลสืบเนื่องหรือการสูญเสียที่เกิดจากการประมาทเลินเล่อ) ที่เกิดขึ้นโดยตรงหรือโดยอ้อม หรือเกี่ยวข้องกับโปรโมชั่นนี้หรือรางวัลใดๆ ที่มอบให้เป็นส่วนหนึ่งของโปรโมชั่นนี้</p>
+                    <div class="wu-lpterms__termitem"><span>14. </span><p>ภายใต้กฎหมายที่บังคับใช้ซึ่งไม่สามารถยกเว้นได้ ผู้จัดโปรโมชั่นและองค์กรที่เกี่ยวข้องและตัวแทนที่เกี่ยวข้องกับโปรโมชันนี้จะไม่รับผิดชอบต่อการสูญเสีย ความเสียหาย หรือการกระทำใดๆ ที่เกิดขึ้นกับบุคคลใดๆ (รวมถึงแต่ไม่จำกัดการสูญเสียโดยตรงหรือโดยอ้อม การสูญเสียที่เป็นผลสืบเนื่อง หรือการสูญเสียที่เกิดจากการประมาทเลินเล่อ) ที่เกิดขึ้นโดยตรงหรือโดยอ้อมจากโปรโมชั่นนี้หรือรางวัลใดๆ ที่มอบให้เป็นส่วนหนึ่งของโปรโมชั่นนี้</p>
                     </div>
                     <!-- 15 -->
-                    <div class="wu-lpterms__termitem"><span>15. </span><p>ในกรณีที่มีข้อขัดแย้งใดๆ ระหว่างข้อกำหนดและเงื่อนไขเหล่านี้กับเอกสารการตลาดหรือเอกสารประกอบอื่นๆ ที่ผลิตขึ้นเกี่ยวกับโปรโมชั่นนี้ ข้อกำหนดและเงื่อนไขเหล่านี้จะมีผลเหนือกว่า</p>
+                    <div class="wu-lpterms__termitem"><span>15. </span><p>ในกรณีที่มีข้อขัดแย้งใดๆ ระหว่างข้อกำหนดและเงื่อนไขเหล่านี้กับเอกสารการตลาดหรือเอกสารประกอบอื่นๆ ที่ผลิตขึ้นเกี่ยวกับโปรโมชันนี้ ข้อกำหนดและเงื่อนไขเหล่านี้จะมีผลเหนือกว่า</p>
                     </div> 
                     <!-- 16 -->
-                    <div class="wu-lpterms__termitem"><span>16. </span><p>หากต้องการคำชี้แจงเพิ่มเติมหรือต้องการร้องเรียน โปรดติดต่อ Stratagile Pte Ltd (“ผู้จัดโปรโมชัน”)  ( หมายเลขติดต่อฝ่ายสนับสนุนในพื้นที่)</p>
+                    <div class="wu-lpterms__termitem"><span>16. </span><p>หากต้องการคำชี้แจงเพิ่มเติมหรือต้องการร้องเรียน โปรดติดต่อ Stratagile Pte Ltd (“ผู้จัดโปรโมชัน”) ที่: ภาษาไทย: 0640264198 และภาษาอังกฤษ: 0991974616</p>
                     </div>
                     <!-- 17 -->
-                    <div class="wu-lpterms__termitem"><span>17. </span><p>การยอมรับรางวัล สิทธิประโยชน์ และข้อเสนอใดๆ ที่มอบให้โดยผู้จัดแคมเปญ ถือเป็นการยินยอมของผู้ชนะในการเข้าร่วมในงานประชาสัมพันธ์ใดๆ ที่เกี่ยวข้อง และใช้ชื่อ รูปลักษณ์ รูปภาพ หรือเสียง เพื่อการโฆษณาและวัตถุประสงค์ส่งเสริมการขายอื่นๆ โดยไม่ได้รับค่าตอบแทน เว้นแต่จะมีการห้ามไว้เป็นอย่างอื่นโดยกฎหมายที่เกี่ยวข้อง</p>
+                    <div class="wu-lpterms__termitem"><span>17. </span><p>การยอมรับรางวัล สิทธิประโยชน์ หรือข้อเสนอใดๆ ที่มอบให้โดยผู้จัดแคมเปญ ถือเป็นการยินยอมของผู้ชนะในการเข้าร่วมในงานประชาสัมพันธ์ใดๆ ที่เกี่ยวข้อง และใช้ชื่อ รูปลักษณ์ รูปภาพ หรือเสียง เพื่อการโฆษณาและวัตถุประสงค์ส่งเสริมการขายอื่นๆ โดยไม่ได้รับค่าตอบแทน เว้นแต่จะมีการห้ามไว้เป็นอย่างอื่นโดยกฎหมายที่เกี่ยวข้อง</p>
                     </div>
                      <!-- 18 -->
-                     <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile จะเก็บรายละเอียดไว้ในฐานข้อมูลที่ปลอดภัย (โฮสต์โดย AWS) ข้อมูลของลูกค้าจะไม่ถูกใช้เพื่อวัตถุประสงค์ใดๆ ยกเว้นสำหรับการคัดเลือกผู้ชนะและจะไม่เปิดเผย หากลูกค้าเลือกไม่เข้าร่วม เราจะลบข้อมูลโดยไม่มีประวัติอย่างถาวร Western Union จะมองเห็นข้อมูลได้เฉพาะเพื่อวัตถุประสงค์ในการตรวจยืนยันธุรกรรมเท่านั้น และจะไม่เก็บสำเนาใดๆ ไว้ เราจะลบข้อมูลเมื่อสิ้นสุดระยะเวลาแคมเปญ เราจะโพสต์คำชี้แจงความเป็นส่วนตัวออนไลน์โดยละเอียดและข้อกำหนดและเงื่อนไขแนบมากับลิงก์</p>
+                     <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile จะเก็บรายละเอียด ไว้ในฐานข้อมูลที่ปลอดภัย (โฮสต์โดย AWS) ข้อมูลของลูกค้าจะไม่ถูกใช้เพื่อวัตถุประสงค์ใดๆ ยกเว้นการคัดเลือกผู้ชนะ และจะไม่ถูกแบ่งปันด้วยเช่นกัน หากลูกค้าเลือกไม่รับบริการ เราจะลบข้อมูลที่ไม่มีประวัติอย่างถาวร เราจะส่งข้อมูลดังกล่าวให้กับ Western Union เพื่อวัตถุประสงค์ในการตรวจยืนยันธุรกรรม และเราจะลบข้อมูลดังกล่าวเมื่อสิ้นสุดระยะเวลาโปรโมชั่น เราจะโพสต์คำชี้แจงความเป็นส่วนตัวออนไลน์โดยละเอียดและข้อกำหนดและเงื่อนไขแนบไว้กับลิงก์์</p>
                     </div>
                      <!-- 19 -->
-                     <div class="wu-lpterms__termitem"><span>19. </span><p>โปรโมชั่นนี้สอดคล้องกับกฎหมายและข้อบังคับต่อต้านการติดสินบนและการทุจริตที่เกี่ยวข้องทั้งหมด</p>
+                     <div class="wu-lpterms__termitem"><span>19. </span><p>โปรโมชั่นนี้สอดคล้องกับกฎหมายและข้อบังคับต่อต้านการติดสินบนและการทุจริตที่เกี่ยวข้องทั้งหมด
+                        © 2024 Stratagile Pte Ltd สงวนลิขสิทธิ์
+                        </p>
                     </div>
                 </div>
             </div>
