--- a/organisms/lp-terms&conditions.html
+++ b/organisms/lp-terms&conditions.html
@@ -19,8 +19,8 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">Terms & Conditions</h3>
-                <div class="wu-lpterms__terms">
+                <h3 class="wu-title">TERMS AND CONDITIONS – LOYALTY CAMPAIGN 2024</h3>
+                <div class="wu-lpterms__terms"> 
                     <!-- 1 -->
                     <div class="wu-lpterms__termitem"><span>1. </span><p>Information on how to enter and the prizes form part of these Terms and Conditions. By registering online, participants agree to these Terms and Conditions.</p></div>
                     <!-- 2 -->
@@ -38,32 +38,32 @@
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">100 THB Grab Voucher:</span> The first 800 customers to complete one qualifying transaction can receive one (1) 100 THB Grab voucher, with one win per customer. </p>
+                                    <p><span class="bld">100 THB Grab Voucher:</span> The first 800 customers to complete one qualifying transaction can receive one (1) 100 THB Grab voucher, with one win per customer.</p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">300 THB Grab Voucher:</span> The first 800 customers to complete two qualifying transactions can receive one (1) 300 THB Grab voucher, with one win per customer. </p>
+                                    <p><span class="bld">300 THB Grab Voucher:</span> The first 800 customers to complete two qualifying transactions can receive one (1) 300 THB <span class="bld">Grab</span> voucher, with one win per customer.</p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">Single prize:</span> Customers may win either of vouchers once only. </p>
+                                    <p><span class="bld">Single prize:</span> Customers may win either of vouchers once only.</p>
                                 </div>
                             </li>
                         </ul>
                      </div>
                      <!-- 7 -->
-                     <div class="wu-lpterms__termitem"><span>7. </span><p>The prizes are non-transferrable or not convertible to cash. In order to claim their entry, an Eligible Participant should log in campaign page and provide the following information to register to the promotion until 15th March 2025.</p></div>
+                     <div class="wu-lpterms__termitem"><span>7. </span><p>The prizes are non-transferrable or not convertible to cash. In order to claim their entry, an Eligible Participant should log in <u>campaign page</u> and provide the following information to register to the promotion until 15th March 2025.</p></div>
                      <!-- list -->
                     <div class="wu-lpterms__termlistb">
                         <ul>
                             <li class="wu-lpterms__termlistitmb">(a) Name (as provided by the sender and written in the ID),</li>
                             <li class="wu-lpterms__termlistitmb">(b) Mobile Number</li>
                             <li class="wu-lpterms__termlistitmb">(c) Email Address</li>
-                            <li class="wu-lpterms__termlistitmb">(e) Date transaction was made</li>
-                            <li class="wu-lpterms__termlistitmb">(f) To what country the remittance was sent</li>
-                            <li class="wu-lpterms__termlistitmb">(g) 10 digits of the MTCN </li>
+                            <li class="wu-lpterms__termlistitmb">(d) Date transaction was made</li>
+                            <li class="wu-lpterms__termlistitmb">(e) To what country the remittance was sent</li>
+                            <li class="wu-lpterms__termlistitmb">(f) 10 digits of the MTCN </li>
                         </ul>
                     </div>
                     <!-- 8 -->
@@ -77,12 +77,12 @@
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>800 winners with 100 THB valued Grab voucher will be selected by the sequence of date of the 1st transaction.  </p>
+                                    <p>800 winners with 100 THB valued Grab voucher will be selected by the sequence of date of the 1st transaction.</p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>800 winners with 300 THB valued Grab voucher will be selected by the sequence of date of the 2nd transaction.  </p>
+                                    <p>800 winners with 300 THB valued Grab voucher will be selected by the sequence of date of the 2nd transaction.</p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
@@ -93,7 +93,8 @@
                         </ul>
                      </div>
                      <!-- 11 -->
-                     <div class="wu-lpterms__termitem"><span>11. </span><p>Offer valid while stocks last and valid during the Promotion Period. Prizes are provided by a third-party provider, subject to their respective terms and conditions (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) of the product warranty, in relation to which the Promoter will have no liability whatsoever.</p></div>
+                     <div class="wu-lpterms__termitem"><span>11. </span><p>Offer valid while stocks last and valid during the Promotion Period. Prizes are provided by a third-party provider, subject to their respective terms and conditions (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) of the product warranty, in relation to which the Promoter will have no liability whatsoever. 
+                     </p></div>
                      <!-- 12 -->
                      <div class="wu-lpterms__termitem"><span>12. </span><p>Winners shall be responsible for any tax arising for winning the prize. The prizes are provided by a third party and will be responsible for any matters arising from or in connection with the prizes, services, and/or information they provide in relation to which the Promoter will have no liability whatsoever. Any enquiry or complaint regarding the prizes, services, and/or information should be directed to the third party. The Promoter will not be held liable for prizes that do not reach winners expectations and to the quality and availability of the prizes, services and information provided by the third-party provider, and excludes liability in connection with the Promotion once the winner(s) enjoys any benefit relating to the Promotion of the full extent permitted by law.</p></div>
                      <!-- 13 -->
@@ -103,11 +104,11 @@
                      <!-- 15 -->
                      <div class="wu-lpterms__termitem"><span>15. </span><p>To the extent that there is any inconsistency between these terms and conditions and other marketing materials or collateral produced in relation to this Promotion, these terms and conditions will prevail.</p></div>
                      <!-- 16 -->
-                     <div class="wu-lpterms__termitem"><span>16. </span><p>For any further clarification and complaints, you can reach out to Stratagile Pte Ltd (“Promoter”) at: xxxxxxxxx(Local support contact number)</p></div>
+                     <div class="wu-lpterms__termitem"><span>16. </span><p>For any further clarification and complaints, you can reach out to Stratagile Pte Ltd (“Promoter”) at: Thai: 0640264198 and English: 0991974616</p></div>
                      <!-- 17 -->
                      <div class="wu-lpterms__termitem"><span>17. </span><p>Acceptance of any prize, benefit and/or offer provided by the Promoter will be deemed as consent by the winner(s) to take part in any related publicity and using their name, likeness, image and/or voice for advertising and other promotional purposes without compensation, except as otherwise prohibited by any applicable law.</p></div>
                      <!-- 18 -->
-                     <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile will keep the details in a secure database (AWS hosted). The customer data will not be used for any purpose except for winner selection and will not be shared either. If a customer opts out, we will permanently delete the record with no history. Western Union will have visibility of the data solely for transaction verification purposes and will not retain any copy. We will delete the data at the end of the pilot period. We will post a detailed online privacy statement and Terms and Conditions attached to the link.</p></div>
+                     <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile will keep the details in a secure database (AWS hosted). The customer data will not be used for any purpose except winner selection and will not be shared either. If a customer opts out, we will permanently delete the record with no history. We will hand over the data to Western Union for transaction verification purpose and we will delete the data at our end at the end of the pilot period. We will post a detailed online privacy statement and Terms and Conditions attached to the link.</p></div>
                      <!-- 19 -->
                      <div class="wu-lpterms__termitem"><span>19. </span><p>The promotion is compliant with all applicable anti-bribery and corruption laws and regulations.</p></div>
                 </div>
