--- a/organisms/lp-terms-ch_th.html
+++ b/organisms/lp-terms-ch_th.html
@@ -69,9 +69,9 @@
                             <li class="wu-lpterms__termlistitmb">(a) 姓名（由汇款人提供, 姓名需要与身份证上一致）</li>
                             <li class="wu-lpterms__termlistitmb">(b) 手机号码</li>
                             <li class="wu-lpterms__termlistitmb">(c) 电子邮件地址</li>
-                            <li class="wu-lpterms__termlistitmb">(e) 交易日期</li>
-                            <li class="wu-lpterms__termlistitmb">(f) 汇款到哪个国家</li>
-                            <li class="wu-lpterms__termlistitmb">(g) MTCN 的 10 位数字</li>
+                            <li class="wu-lpterms__termlistitmb">(d) 交易日期</li>
+                            <li class="wu-lpterms__termlistitmb">(e) 汇款到哪个国家</li>
+                            <li class="wu-lpterms__termlistitmb">(f) MTCN 的 10 位数字</li>
                         </ul>
                     </div>
                      <!-- 8 -->
