--- a/organisms/lp-terms-thai.html
+++ b/organisms/lp-terms-thai.html
@@ -72,8 +72,8 @@
                             <li class="wu-lpterms__termlistitmb">(ข) หมายเลขโทรศัพท์มือถือ</li>
                             <li class="wu-lpterms__termlistitmb">(ค) ที่อยู่อีเมล</li>
                             <li class="wu-lpterms__termlistitmb">(ง) วันที่ทำรายการ</li>
-                            <li class="wu-lpterms__termlistitmb">(f) เงินโอนถูกส่งไปที่ประเทศใด</li>
-                            <li class="wu-lpterms__termlistitmb">(g) เลข MTCN 10 หลัก</li>
+                            <li class="wu-lpterms__termlistitmb">(จ) เงินโอนถูกส่งไปที่ประเทศใด</li>
+                            <li class="wu-lpterms__termlistitmb">(ฉ) เลข MTCN 10 หลัก</li>
                         </ul>
                     </div>
                      <!-- 8 -->
