--- a/organisms/lp-terms-ph-th.html
+++ b/organisms/lp-terms-ph-th.html
@@ -70,9 +70,9 @@
                             </li>
                             <li class="wu-lpterms__termlistitmb">(b) Mobile Number</li>
                             <li class="wu-lpterms__termlistitmb">(c) Email Address</li>
-                            <li class="wu-lpterms__termlistitmb">(e) Petsa ng transaction</li>
-                            <li class="wu-lpterms__termlistitmb">(f) Kung saang bansa ipinadala ang remittance</li>
-                            <li class="wu-lpterms__termlistitmb">(g) 10 digits of the MTCN</li>
+                            <li class="wu-lpterms__termlistitmb">(d) Petsa ng transaction</li>
+                            <li class="wu-lpterms__termlistitmb">(e) Kung saang bansa ipinadala ang remittance</li>
+                            <li class="wu-lpterms__termlistitmb">(f) 10 digits of the MTCN</li>
                         </ul>
                     </div>
                      <!-- 8 -->
