--- a/organisms/lp-terms&conditions.html
+++ b/organisms/lp-terms&conditions.html
@@ -19,10 +19,10 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">TERMS AND CONDITIONS – LOYALTY CAMPAIGN 2024</h3>
+                <h3 class="wu-title">TERMS AND CONDITIONS –LOYALTY CAMPAIGN 2024 </h3>
                 <div class="wu-lpterms__terms"> 
                     <!-- 1 -->
-                    <div class="wu-lpterms__termitem"><span>1. </span><p>Information on how to enter and the prizes form part of these Terms and Conditions. By registering online, participants agree to these Terms and Conditions.</p></div>
+                    <div class="wu-lpterms__termitem"><span>1. </span><p>Information on how to enter and the prizes form part of these Terms and Conditions. By registering <u>online</u>, participants agree to these Terms and Conditions.</p></div>
                     <!-- 2 -->
                     <div class="wu-lpterms__termitem"><span>2. </span><p>The Promoter of this Promotion is Stratagile Pte Ltd  (“Promoter”) of address PHRONG STRATAGILE CO., LTD, 149 MOO 4, KAELINE, KARTUMBAEN, SAMUTSAKHON 74110, THAILAND22. Phrong Stratagile Co., Ltd is managing this promotion on behalf of Western Union and Western Union is not liable for any aspect of the promotion. The program is fully managed by the Promoter.</p></div>
                     <!-- 3 -->
@@ -30,7 +30,7 @@
                     <!-- 4 -->
                     <div class="wu-lpterms__termitem"><span>4. </span><p>This Promotion commences at 12:00am (Bangkok time) on 15th Dec 2024 and ends on 11:59pm (Bangkok time) on 15th March 2025 (“Promotion Period”). and is subject to extension by the Promoter.</p></div>
                     <!-- 5 -->
-                    <div class="wu-lpterms__termitem"><span>5. </span><p>How to enter: Register online  and choose desired prize (select one type only). Successfully send Western Union® Money Transfer in the amount of at least 10,000 THB from any of Western Union agents/partners at retail locations or mobile banking  or Western Union branded digital (wu.com and Western Union mobile app) in Thailand to the Philippines, USA, China, India and Vietnam during the Promotion Period. </p></div>
+                    <div class="wu-lpterms__termitem"><span>5. </span><p>How to enter: Register <u>online</u>  and choose desired prize (select one type only). Successfully send Western Union® Money Transfer in the amount of at least 10,000 THB from any of Western Union agents/partners at retail locations or mobile banking  or Western Union branded digital (wu.com and Western Union mobile app) in Thailand to the Philippines, USA, China, India and Vietnam during the Promotion Period. </p></div>
                     <!-- 6 -->
                     <div class="wu-lpterms__termitem"><span>6. </span><p>Prizes: </p></div>
                     <!-- list-a -->
@@ -61,9 +61,9 @@
                             <li class="wu-lpterms__termlistitmb">(a) Name (as provided by the sender and written in the ID),</li>
                             <li class="wu-lpterms__termlistitmb">(b) Mobile Number</li>
                             <li class="wu-lpterms__termlistitmb">(c) Email Address</li>
-                            <li class="wu-lpterms__termlistitmb">(d) Date transaction was made</li>
-                            <li class="wu-lpterms__termlistitmb">(e) To what country the remittance was sent</li>
-                            <li class="wu-lpterms__termlistitmb">(f) 10 digits of the MTCN </li>
+                            <li class="wu-lpterms__termlistitmb">(e) Date transaction was made</li>
+                            <li class="wu-lpterms__termlistitmb">(f) To what country the remittance was sent</li>
+                            <li class="wu-lpterms__termlistitmb">(g) 10 digits of the MTCN</li>
                         </ul>
                     </div>
                     <!-- 8 -->
@@ -100,7 +100,7 @@
                      <!-- 13 -->
                      <div class="wu-lpterms__termitem"><span>13. </span><p>If this Promotion is interfered with in any way or is not capable of being conducted as reasonably anticipated due to any reason beyond the reasonable control of the Promoter, including but not limited to technical difficulties or failures, unauthorized intervention or fraud, vandalism, power failure, natural disasters, acts of God, civil unrest, strikes, infection by computer virus, bugs, tampering, unauthorized intervention, fraud, or any other causes beyond the control of the Promoter, which corrupt or affect the administration, security, fairness or integrity or proper conduct of this Promotion, the Promoter reserves the right, in its sole discretion, to the fullest extent permitted by law: (a) to disqualify any Eligible Participant; or (b) subject to any written directions from a regulatory authority, to modify, suspend, terminate or cancel the Promotion, as appropriate to give effect so far as reasonably possible to the original intent of this Promotion.</p></div>
                      <!-- 14 -->
-                     <div class="wu-lpterms__termitem"><span>14. </span><p>Subject to any applicable laws which cannot be excluded, the Promoter and its related bodies corporate and agents associated with this Promotion shall not be liable for any loss, damage or injury suffered or sustained by anyone (including, but not limited to, direct or indirect loss, consequential loss or loss arising from negligence) arising directly or indirectly out of or in connection with this Promotion or any prize provided as part of this Promotion.</p></div>
+                     <div class="wu-lpterms__termitem"><span>14. </span><p>Subject to any applicable laws which cannot be excluded, the Promoter and its related bodies corporate and agents associated with this Promotion shall not be liable for any loss, damage or injury suffered or sustained by anyone (including, but not limited to, direct or indirect loss, consequential loss or loss arising from negligence) arising directly or indirectly out of or in connection with this Promotion or any prize provided as part of this Promotion</p></div>
                      <!-- 15 -->
                      <div class="wu-lpterms__termitem"><span>15. </span><p>To the extent that there is any inconsistency between these terms and conditions and other marketing materials or collateral produced in relation to this Promotion, these terms and conditions will prevail.</p></div>
                      <!-- 16 -->
